--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -12,9 +12,9 @@
   justify-content: space-between;
 
 }
-.headerLeft {
-}
-.headerCenter {
-}
-.headerRight {
-}
+// .headerLeft {
+// }
+// .headerCenter {
+// }
+// .headerRight {
+// }
