--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -1,64 +1,88 @@
-.topBar{
+.topBar {
   border: 2px solid red;
-}
-
-.profile{
-  border: 2px solid gray;
-  display: flex;
-  justify-content: space-between;
 }
 
 .sideBar {
   flex: 3;
 }
 
-.profileBlock {
-  border: 2px solid green;
-  flex: 9;
+.profile {
+  border: 2px solid gray;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+
+  .profileBlock {
+    border: 2px solid green;
+    flex: 9;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .profileBlockTop {
+    border: 2px solid hotpink;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .profileFonImg {
+      width: 100%;
+      height: 250px;
+    }
+
+    .profileUserImg {
+      position: absolute;
+      width: 150px;
+      height: 150px;
+      right: 0;
+      left: 0;
+      top: 150px;
+      border: 4px solid white;
+      margin: auto;
+      border-radius: 50%;
+    }
+  }
+
+  .profileInfo {
+    margin-top: 60px;
+    margin-bottom: 15px;
+    text-align: center;
+
+    .profileName {
+      font-size: 25px;
+      padding: 0;
+      margin: 0;
+    }
+  }
+
+  .profileBlockBottom {
+    display: flex;
+
+    .feeds {
+      flex: 9;
+    }
+
+    .profileRightBlock {
+      border: 2px solid firebrick;
+      flex: 3;
+      padding: 0.5%;
+
+      .profileDescriptionInfo {
+        margin: 0;
+      }
+
+      .profileDescription {
+        margin-bottom: 10px;
+        font-size: 18px;
+
+        .profileDescriptionName {
+          color: gray;
+          font-weight: bold;
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+
+
 }
-
-.profileBlockTop {
-  border: 2px solid hotpink;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.profileFonImg {
-  width: 100%;
-  height: 250px;
-}
-
-.profileUserImg {
-  position: absolute;
-  width: 150px;
-  height: 150px;
-  right: 0;
-  left: 0;
-  top: 150px;
-  border: 3px solid white;
-  margin: auto;
-  border-radius: 50%;
-}
-
-.profileInfo {
-  margin-top: 60px;
-}
-
-.profileBlockBottom {
-  display: flex;
-}
-
-.feeds {
-  flex: 9;
-}
-
-.profileRightBlock {
-  border: 2px solid firebrick;
-  flex: 3;
-}
-
-
