--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,7 +1,7 @@
 @import '../../scss/main.scss';
 
 .header {
-  width: 100vw;
+  width: 100%;
   height: 50px;
   display: flex;
   align-items: center;
