--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "Nunito-Italic";
+  src: local("Nunito-Italic"), url("../../assets/fonts/Nunito-Italic-VariableFont_wght.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Nunito";
+  src: local("Nunito"), url("../../assets/fonts/Nunito-VariableFont_wght.ttf") format("truetype");
+}
+
 .topBar {
   border: 2px solid red;
 }
@@ -7,6 +17,7 @@
 }
 
 .profile {
+  font-family: "Nunito", sans-serif;
   border: 2px solid gray;
   display: flex;
   justify-content: space-between;
@@ -49,9 +60,13 @@
     text-align: center;
 
     .profileName {
-      font-size: 25px;
+      font-size: 1.7rem;
       padding: 0;
       margin: 0;
+    }
+
+    .profileStatus {
+      font-size: 1.3em;
     }
   }
 
@@ -68,21 +83,48 @@
       padding: 0.5%;
 
       .profileDescriptionInfo {
-        margin: 0;
+        text-align: center;
+        font-size: 1.3em;
+        margin-bottom: 10px;
       }
 
       .profileDescription {
         margin-bottom: 10px;
-        font-size: 18px;
+        font-size: 1.2em;
 
         .profileDescriptionName {
-          color: gray;
+          color: cadetblue;
           font-weight: bold;
           margin-right: 10px;
         }
       }
+
+      .followersBlock {
+
+        .followers {
+          display: flex;
+          justify-content: space-between;
+          flex-wrap: wrap;
+
+          .follower {
+            width: 120px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            .followerImg {
+              width: 100px;
+              border-radius: 50%;
+            }
+
+            .followerName {
+              font-size: 1em;
+              text-align: center;
+            }
+          }
+        }
+      }
     }
   }
-
-
 }
