feat: add header

--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -1,5 +1,9 @@
 // Sass Variables
 
-// variables colors
+//base font
+$base-font: 'Roboto', sans-serif;
 
+// variables colors
+$color-white: #fff;
+$color-red: red;
 $color-bacgraund-header: #1877f2;
