--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -7,3 +7,7 @@ $base-font: 'Roboto', sans-serif;
 $color-white: #fff;
 $color-red: red;
 $color-bacgraund-header: #1877f2;
+
+
+// Experts
+$padding-edge-screen: 15px !default; // отступ от края экрана мобильных устройств
