feat: sidebar indents

--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -3,6 +3,8 @@
 .sidebar {
   flex: 3;
   height: calc(100vh - 50px);
-  background-color: yellow !important;;
 
+}
+.sideWrapper {
+  padding: 20px; background-color: yellow !important;
 }
