feat: add sidebar & feed components in profile page

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,11 +1,13 @@
 @import '../../scss/main.scss';
 
 .header {
+  font-family: Nunito, sans-serif;
   height: 50px;
   display: flex;
   background-color: $color-bacgraund-header;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 .headerWrapper {
   width: 100%;
@@ -38,7 +40,7 @@
 }
 .searchIcon {
   font-size: 20px !important;
-  margin: 0px 0px 0px 10px;
+  margin: 0 0 0 10px;
 }
 .searchInput {
   border: none;
@@ -58,7 +60,7 @@
 }
 
 .headerLink {
-  margin: 0px 10px 0px 0px;
+  margin: 0 10px 0 0;
   font-size: 14px;
   cursor: pointer;
 }
@@ -68,7 +70,7 @@
 }
 
 .headerIconItem {
-  margin: 0px 10px 0px 0px;
+  margin: 0 10px 0 0;
   cursor: pointer;
   position: relative;
 }
