--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -8,29 +8,19 @@
   src: local("Nunito"), url("../../assets/fonts/Nunito-VariableFont_wght.ttf") format("truetype");
 }
 
-.topBar {
-  border: 2px solid red;
-}
-
-.sideBar {
-  flex: 3;
-}
-
 .profile {
   font-family: "Nunito", sans-serif;
-  border: 2px solid gray;
   display: flex;
   justify-content: space-between;
 
   .profileBlock {
-    border: 2px solid green;
     flex: 9;
     display: flex;
     flex-direction: column;
   }
 
   .profileBlockTop {
-    border: 2px solid hotpink;
+    border-bottom: 2px solid hotpink;
     position: relative;
     display: flex;
     flex-direction: column;
