fix: fix header.scss file

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -96,7 +96,7 @@
   cursor: pointer;
 }
 
-.followerImg {
-  width: 30px !important;
+.headerRight .follower .followerImg {
+  width: 30px ;
   border-radius: 50%;
 }
