--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -3,7 +3,18 @@
 .sidebar {
   flex: 3;
   height: calc(100vh - 50px);
+  overflow-y: scroll !important;;
 }
+::-webkit-scrollbar{
+  width: 5px;
+}
+::-webkit-scrollbar-track{
+  background-color: $color-scroll-track;
+}
+::-webkit-scrollbar-thumb{
+  background-color: $color-scroll-trumb;
+}
+
 .sideWrapper {
   padding: 20px;
 }
@@ -18,6 +29,40 @@
   align-items: center;
   margin: 0px 0px 20px 0px;
 }
-.sidebarIcon{
+.sidebarIcon {
   margin: 0px 15px 0px 0px;
+}
+.sidebarButton {
+  width: 150px;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: 500;
+  cursor: pointer;
+}
+.sidebarHr {
+  margin: 20px 0;
+}
+.sidebarFriendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.sidebarFriend {
+  display: flex;
+  margin: 0px 0px 15px 0px;
+  & .follower {
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    flex-direction: row;
+    justify-content: flex-start;
+    & .followerImg {
+      width: 32px;
+      height: 32px;
+      border: 1px solid $color-black;
+      margin: 0 15px 0 0;
+      object-fit: cover;
+    }
   }
+}
