--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -5,6 +5,9 @@ $base-font: 'Roboto', sans-serif;
 
 // variables colors
 $color-white: #fff;
+$color-scroll-track: #f1f1f1;
+$color-scroll-trumb: #cccccc;
+$color-black: #000;
 $color-red: red;
 $color-bacgraund-header: #1877f2;
 
