feat: add post and feed

--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -7,7 +7,8 @@ $base-font: 'Roboto', sans-serif;
 $color-white: #fff;
 $color-green: #008000;
 $color-black: #000;
-$color-red: red;
+$color-red: #ff0000;
+$color-grey: #808080;
 $color-bacgraund-header: #1877f2;
 $color-scroll-track: #f1f1f1;
 $color-scroll-trumb: #cccccc;
