--- a/client/src/scss/abstracts/_mixins.scss
+++ b/client/src/scss/abstracts/_mixins.scss
@@ -23,3 +23,23 @@
   line-height: 91.666667%;
   color: $color-white;
 }
+@mixin font-postName {
+  @include font(0.9375rem, 500, $base-font, normal);
+  line-height: 91.666667%;
+  color: $color-black;
+}
+@mixin font-postData {
+  @include font(0.75rem, 400, $base-font, normal);
+  line-height: 91.666667%;
+  color: $color-black;
+}
+@mixin font-postLikeCounter {
+  @include font(0.75rem, 400, $base-font, normal);
+  line-height: 91.666667%;
+  color: $color-black;
+}
+@mixin font-postComment {
+  @include font(0.75rem, 400, $base-font, normal);
+  line-height: 91.666667%;
+  color: $color-black;
+}
