--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $base-font: 'Roboto', sans-serif;
 // variables colors
 $color-white: #fff;
 $color-green: #008000;
+$color-lime: lime;
 $color-black: #000;
 $color-red: #ff0000;
 $color-grey: #808080;
