refactor: change design profile page

--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -20,7 +20,6 @@
   }
 
   .profileBlockTop {
-    border-bottom: 2px solid hotpink;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -62,15 +61,16 @@
 
   .profileBlockBottom {
     display: flex;
+    margin: 0;
 
     .feeds {
       flex: 9;
     }
 
     .profileRightBlock {
-      border: 2px solid firebrick;
+      margin: 10px 10px 10px 0;
       flex: 3;
-      padding: 0.5%;
+      padding: 10px;
 
       .profileDescriptionInfo {
         text-align: center;
@@ -78,18 +78,33 @@
         margin-bottom: 10px;
       }
 
-      .profileDescription {
-        margin-bottom: 10px;
-        font-size: 1.2em;
+      .profileDescriptions {
+        height: 170px;
+        padding: 10px;
+        border-radius: 10px;
+        -webkit-box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
+        -moz-box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
+        box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
 
-        .profileDescriptionName {
-          color: cadetblue;
-          font-weight: bold;
-          margin-right: 10px;
+        .profileDescription {
+          margin-bottom: 10px;
+          font-size: 1.2em;
+
+          .profileDescriptionName {
+            color: cadetblue;
+            font-weight: bold;
+            margin-right: 10px;
+          }
         }
       }
 
       .followersBlock {
+        border-radius: 10px;
+        -webkit-box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
+        -moz-box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
+        box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
+        margin-top: 30px;
+        padding: 10px;
 
         .followers {
           display: flex;
