--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -12,39 +12,29 @@
   padding: 10px;
 }
 .postTop {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .postTopLeft {
-  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  & .follower {
-    width: 100%;
-    justify-content: flex-start;
-    flex-direction: row;
-    & .followerImg {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-    & .followerName {
-      @include font-postName;
-      text-align: left;
-      margin: 0 10px;
-    }
+  .postProfileImg {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .postUsername {
+    @include font($size: 15px, $weight: 500); // font-size: 15px;
+    margin: 0 10px;
+  }
+  .postDate {
+    font-size: 12px;
   }
 }
-.postDate {
-  width: 100%;
-  @include font-postData;
-}
-.postTopRight {
-}
+
 .postCenter {
   margin: 20px 0;
 }
@@ -72,7 +62,7 @@
 .postLikeCounter {
   @include font-postLikeCounter;
 }
-.postCommentText{
+.postCommentText {
   @include font-postComment;
   cursor: pointer;
   border-bottom: 1px dashed $color-grey;
