--- a/client/src/components/rightbar/rightbar.scss
+++ b/client/src/components/rightbar/rightbar.scss
@@ -7,11 +7,11 @@
 .rightbarWrapper {
   padding: 20px 20px 0 0;
 }
-.birdhdayContainer {
+.birthdayContainer {
   display: flex;
   align-items: center;
 }
-.birdhdeyImg {
+.birthdayImg {
   width: 40px;
   height: 40px;
   margin: 0 10px 0 0;
@@ -27,7 +27,7 @@
   border-radius: 10px;
   margin: 30px 0;
 }
-.rightbarTitle{
+.rightbarTitle {
   margin: 0 0 20px 0;
 }
 .rightbarFriendList {
@@ -35,41 +35,41 @@
   margin: 0;
   list-style: none;
 }
-.rightbarFriend {
-  display: flex;
-  align-items: center;
-  margin: 0 0 15px 0;
-}
-.rightbarProfileImgContainer {
-  margin: 0 10px 0 0;
-  position: relative;
-  & .follower {
-    width: 100%;
-    align-items: center;
-    flex-direction: row;
-    & .followerImg {
-      width: 40px;
-      height: 40px;
-      object-fit: cover;
-      display: block;
-      position: relative;
-    }
-    & .followerName {
-      @include font-postName;
-      margin: 0 0 0 5px;
-      text-align: start;
-    }
-  }
-}
-.rightbarOnline {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: $color-lime;
-  display: block;
-  position: absolute;
-  // z-index: 1;
-  left: 27px;
-  top: 0;
-  border: 2px solid $color-white;
-}
+// .rightbarFriend {
+//   display: flex;
+//   align-items: center;
+//   margin: 0 0 15px 0;
+// }
+// .rightbarProfileImgContainer {
+//   margin: 0 10px 0 0;
+//   position: relative;
+//   & .follower {
+//     width: 100%;
+//     align-items: center;
+//     flex-direction: row;
+//     & .followerImg {
+//       width: 40px;
+//       height: 40px;
+//       object-fit: cover;
+//       display: block;
+//       position: relative;
+//     }
+//     & .followerName {
+//       @include font-postName;
+//       margin: 0 0 0 5px;
+//       text-align: start;
+//     }
+//   }
+// }
+// .rightbarOnline {
+//   width: 12px;
+//   height: 12px;
+//   border-radius: 50%;
+//   background-color: $color-lime;
+//   display: block;
+//   position: absolute;
+//   // z-index: 1;
+//   left: 27px;
+//   top: 0;
+//   border: 2px solid $color-white;
+// }
