--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -3,7 +3,9 @@
 .sidebar {
   flex: 3;
   height: calc(100vh - 50px);
-  overflow-y: scroll !important;
+  overflow-y: scroll;
+  position: sticky;
+  top: 50px;
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -47,21 +49,4 @@
   padding: 0;
   margin: 0;
   list-style: none;
-}
-.sidebarFriend {
-  display: flex;
-  margin: 0 0 15px 0;
-  & .follower {
-    width: 100%;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    & .followerImg {
-      width: 32px;
-      height: 32px;
-      border: 1px solid $color-black;
-      margin: 0 15px 0 0;
-      object-fit: cover;
-    }
-  }
 }
