fix: fix sidebar, add position styky

--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -3,7 +3,9 @@
 .sidebar {
   flex: 3;
   height: calc(100vh - 50px);
-  overflow-y: scroll !important;
+  overflow-y: scroll;
+  position: sticky;
+  top: 50px;
 }
 ::-webkit-scrollbar {
   width: 5px;
