--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 10px;
 }
 .headerLeft {
   flex: 3;
@@ -99,6 +100,6 @@
 }
 
 .headerRight .follower .followerImg {
-  width: 30px ;
+  width: 30px;
   border-radius: 50%;
 }
