--- a/client/src/components/logo/logo.scss
+++ b/client/src/components/logo/logo.scss
@@ -1,3 +1,5 @@
+@import '../../scss/main.scss';
+
 @font-face {
   font-family: "MontserratAlt1";
   src: local("MontserratAlt1"), url("../../assets/fonts/MontserratAlt1-Regular.ttf") format("truetype");
@@ -7,6 +9,6 @@
   font-family: 'MontserratAlt1', cursive;
   margin: 0;
   font-size: 40px;
-  color: #1877f2;
+  color: $color-logo-logo;
   font-weight: bold;
 }
