--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $color-lime: lime;
 $color-black: #000;
 $color-red: #ff0000;
 $color-grey: #808080;
+$color-logo-logo: #1877f2;
 $color-bacgraund-header: #1877f2;
 $color-scroll-track: #f1f1f1;
 $color-scroll-trumb: #cccccc;
