--- a/client/src/scss/base/_reset.scss
+++ b/client/src/scss/base/_reset.scss
@@ -2,9 +2,16 @@
 
 @import-normalize;
 
-
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+h3 {
+  margin: 0;
+  padding: 0;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
