fix: fix class loginLogo

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -22,7 +22,7 @@
   display: flex;
   & .loginLogo {
     font-family: 'MontserratAlt1', cursive;
-    margin: 0 0 0 20px;
+    margin: 0;
     padding: 0;
     font-size: 28px;
     font-weight: bold;
