--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -1,7 +1,7 @@
 .login {
   margin: 0;
   background-color: beige;
-  font-family: Nunito, sans-serif;
+  font-family: Roboto, sans-serif;
   width: 100%;
   height: 97vh;
   display: flex;
