--- a/client/src/components/share/share.scss
+++ b/client/src/components/share/share.scss
@@ -25,9 +25,12 @@
     }
   }
 }
-.shareProfileImg{
+.shareProfileImg {
   width: 50px;
   height: 50px;
+  object-fit: cover;
+  margin: 0 10px 0 0;
+  border-radius: 50%;
 }
 .shareInput {
   border: none;
