--- a/client/src/components/share/share.scss
+++ b/client/src/components/share/share.scss
@@ -2,7 +2,6 @@
 
 .share {
   width: 100%;
-  height: 170px;
   border-radius: 10px;
   -webkit-box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
   -moz-box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
@@ -64,4 +63,30 @@
   background-color: $color-green;
   cursor: pointer;
   margin: 0 20px 0 0;
+}
+
+.shareProfileImg {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.shareImgContainer {
+  padding: 0 20px 10px 20px;
+  position: relative;
+}
+
+.shareImg {
+  width: 100%;
+  object-fit: cover;
+}
+
+.shareCancelImg {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  cursor: pointer;
+  opacity: 0.7;
 }
