refactor: add space between followings image

--- a/client/src/components/rightbar/rightbar.scss
+++ b/client/src/components/rightbar/rightbar.scss
@@ -38,7 +38,7 @@
 .rightbarTitle {
   margin: 0 0 20px 0;
   text-align: center;
- }
+}
 
 .rightbarFriendList {
   padding: 0;
@@ -79,6 +79,7 @@
     flex-direction: column;
     margin-bottom: 20px;
     cursor: pointer;
+    gap: 10px;
   }
 }
 
