--- a/client/src/components/share/share.scss
+++ b/client/src/components/share/share.scss
@@ -2,7 +2,7 @@
 
 .share {
   width: 100%;
-  height: 170px;
+  // height: 170px;
   border-radius: 10px;
   -webkit-box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
   -moz-box-shadow: 0 0 16px -8px rgba(0, 0, 0, 0.68);
@@ -42,6 +42,25 @@
 .shareHr {
   margin: 20px;
 }
+.shareImgContainer {
+  padding: 0 20px 10px 20px;
+  position: relative;
+}
+.shareImg {
+  width: 100%;
+  object-fit: cover;
+}
+.shareCancelImg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  &:hover{
+    background-color: green;
+    border-radius: 50%;
+  }
+}
+
 .shareBottom {
   display: flex;
   align-items: center;
