--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -5,11 +5,14 @@ $base-font: 'Roboto', sans-serif;
 
 // variables colors
 $color-white: #fff;
+$color-dark-white: #f5f3f3;
 $color-green: #008000;
 $color-lime: lime;
+$color-lime-green: limegreen;
 $color-black: #000;
 $color-red: #ff0000;
 $color-grey: #808080;
+$color-teal: teal;
 $color-logo-logo: #1877f2;
 $color-bacgraund-header: #1877f2;
 $color-scroll-track: #f1f1f1;
