--- a/client/src/pages/myAccount/myAccount.scss
+++ b/client/src/pages/myAccount/myAccount.scss
@@ -1,12 +1,76 @@
+@import '../../scss/main.scss';
+
 .my-account {
   display: flex;
 
-
   .myAccountBlock {
+    padding: 3%;
     color: green;
     flex: 9;
-    .profileBlockTop {
-      border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+
+    .editProfileForm {
+
+      .accountTitle {
+        margin-bottom: 30px;
+        text-align: center;
+      }
+
+      .textField {
+        margin-bottom: 15px;
+      }
+
+      .option {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+      }
+      .icon {
+        cursor: pointer;
+        margin: 0 3px 0 0;
+      }
+      .optionText {
+        cursor: pointer;
+        @include font-shareOptionText;
+      }
+
+      .imgContainer {
+        padding: 0 20px 10px 20px;
+        position: relative;
+      }
+
+      .fileImg {
+        width: 100%;
+        object-fit: cover;
+      }
+
+      .cancelImg {
+        position: absolute;
+        top: 0;
+        right: 20px;
+        cursor: pointer;
+        opacity: 0.7;
+      }
+
+      .buttonSave {
+        cursor: pointer;
+        width: 100%;
+        margin: 10px 0;
+        color: white;
+        height: 50px;
+        border: 1px solid gray;
+        padding-left: 15px;
+        background-color: green;
+        font-size: 18px;
+        border-radius: 8px;
+      }
+
+      .buttonSave:focus {
+        outline: none;
+      }
     }
   }
 }
