refactor: add transition for header icon

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -84,6 +84,11 @@
   margin: 0 10px 0 0;
   cursor: pointer;
   position: relative;
+  transition: all 0.3s;
+
+  &:hover {
+    color: darken($color-white, 10%);
+  }
 }
 
 .headerIconBadge {
