--- a/client/src/components/share/share.scss
+++ b/client/src/components/share/share.scss
@@ -54,6 +54,9 @@
 }
 .shareOptionText {
   @include font-shareOptionText;
+  @media (max-width: 560px) {
+    display: none;
+  }
 }
 .shareButton {
   @include font-shareBotton;
