--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -13,6 +13,12 @@
     left: -100%;
     background-color: $color-white;
   }
+  @media (max-width: 460px) {
+    flex: 1;
+    width: 100%;
+    overflow-y: hidden;
+    display: flex;
+  }
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -24,7 +30,8 @@
   background-color: $color-scroll-trumb;
 }
 
-.sideWrapper {
+.sidebarWrapper {
+  width: 100%;
   padding: 20px;
 }
 
@@ -57,4 +64,27 @@
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+@media (max-width: 460px) {
+  .sidebarSearch {
+    width: 100%;
+    height: 70px;
+
+    .searchbar {
+      display: flex !important;
+      align-items: center;
+      position: relative;
+      border: 1px solid $color-scroll-track;
+      z-index: 6;
+    }
+  }
+}
+
+@media (min-width: 460px) {
+  .sidebarSearch {
+    .searchbar {
+      display: none;
+    }
+  }
 }
