feat: add adaptive login

--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -2,7 +2,7 @@
   background-color: beige;
   font-family: Nunito, sans-serif;
   width: 100%;
-  height: 97vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
