--- a/client/src/components/formAuth/formAuth.scss
+++ b/client/src/components/formAuth/formAuth.scss
@@ -19,6 +19,15 @@
     font-size: 18px;
     border-radius: 8px;
     margin-bottom: 10px;
+    @media (max-width: 390px) {
+      font-size: 16px;
+    }
+    @media (max-width: 360px) {
+      font-size: 14px;
+    }
+    @media (max-width: 330px) {
+      font-size: 12px;
+    }
   }
 
   .buttonAuth {
