--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -38,7 +38,6 @@
   @include font-logo;
   color: $color-white;
   cursor: pointer;
-
 }
 
 .headerCenter {
@@ -111,5 +110,34 @@
   @media (max-width: 390px) {
     width: 24px;
     height: 24px;
+  }
+}
+.mobilBtn {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .menu {
+    width: 100%;
+    height: 100vh;
+    background-color: $color-bacground-auth;
+    position: fixed;
+    top: 70px;
+    left: -100%;
+    transition: left .5s ease;
+    z-index: 10;
+  }
+  .active {
+    height: 100vh;
+    left: 0 !important;
+  }
+  .mobilBtn {
+
+    display: block;
+    cursor: pointer;
+    margin-left: 20px;
+  }
+  .menuIcon{
+    font-size: 1.875rem !important;
   }
 }
