--- a/client/src/components/search/search.scss
+++ b/client/src/components/search/search.scss
@@ -18,7 +18,16 @@
 }
 .searchInput {
   border: none;
-  width: 90%;
+  width: 80%;
+  @media (max-width: 525px){
+    width: 70%;
+  }
+  @media (max-width: 475px){
+    width: 55%;
+  }
+  @media (max-width: 460px){
+    width: 80%;
+  }
 }
 
 .searchInput:focus {
