--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -7,18 +7,20 @@
   position: sticky;
   top: 70px;
   @media (max-width: 768px) {
-    // display: none;
-    flex: 1;
-    position: absolute !important;
-    left: -100%;
-    background-color: $color-white;
+    display: none;
+    // flex: 1;
+    // position: absolute !important;
+    // left: -100%;
+    // background-color: $color-white;
   }
-  @media (max-width: 460px) {
-    flex: 1;
-    width: 100%;
-    overflow-y: hidden;
-    display: flex;
-  }
+  // @media (max-width: 460px) {
+  //   flex: 1;
+  //   width: 100%;
+  //   overflow-y: hidden;
+  //   display: flex;
+  //   z-index: 11;
+  //   position: relative;
+  // }
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -66,25 +68,4 @@
   list-style: none;
 }
 
-@media (max-width: 460px) {
-  .sidebarSearch {
-    width: 100%;
-    height: 70px;
 
-    .searchbar {
-      display: flex !important;
-      align-items: center;
-      position: relative;
-      border: 1px solid $color-scroll-track;
-      z-index: 6;
-    }
-  }
-}
-
-@media (min-width: 460px) {
-  .sidebarSearch {
-    .searchbar {
-      display: none;
-    }
-  }
-}
