--- a/client/src/components/menuProfile/menuProfile.scss
+++ b/client/src/components/menuProfile/menuProfile.scss
@@ -15,3 +15,17 @@
     min-width: 26px !important;
   }
 }
+.menuProfileLink {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  & li {
+    width: 100% !important;
+  }
+}
+.menuprofileIcon {
+  font-size: 20px !important;
+  color: $color-grey;
+  margin: 0px 10px 0px 0px;
+  padding-right: auto;
+}
