--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -8,6 +8,30 @@
     flex-direction: column;
   }
 
+  .addFollowProfile {
+    @media (max-width: 1650px) {
+      display: none;
+    }
+    @media (max-width: 880px) {
+      display: flex;
+    }
+    cursor: pointer;
+    width: 120px;
+    align-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    border: none;
+    background-color: $color-logo-logo;
+  }
+
   .profileBlockTop {
     position: relative;
     display: flex;
