--- a/client/src/components/closeFriend/closeFriend.scss
+++ b/client/src/components/closeFriend/closeFriend.scss
@@ -3,6 +3,14 @@
   align-items: center;
   margin-bottom: 15px;
   cursor: pointer;
+  padding: 10px;
+  transition: all 0.3s;
+  border-radius: 3px;
+  &:hover {
+    -webkit-box-shadow: inset -1px 10px 41px -18px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: inset -1px 10px 41px -18px rgba(0, 0, 0, 0.1);
+    box-shadow: inset -1px 10px 41px -18px rgba(0, 0, 0, 0.1);
+  }
 
   .sidebarFriendImg {
     width: 32px;
