--- a/client/src/components/onlineFriend/onlineFriend.scss
+++ b/client/src/components/onlineFriend/onlineFriend.scss
@@ -2,6 +2,15 @@
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+  padding: 10px;
+  transition: all 0.3s;
+  border-radius: 3px;
+
+  &:hover {
+    -webkit-box-shadow: inset -1px 10px 41px -18px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: inset -1px 10px 41px -18px rgba(0, 0, 0, 0.1);
+    box-shadow: inset -1px 10px 41px -18px rgba(0, 0, 0, 0.1);
+  }
 
   .rightbarProfileImgContainer {
     margin-right: 10px;
