feat: add tag input in share

--- a/client/src/components/share/share.scss
+++ b/client/src/components/share/share.scss
@@ -36,7 +36,8 @@
 }
 .shareBottom {
   display: flex;
-  align-items: center;
+  align-items: start;
+  flex-direction: column;
   justify-content: space-between;
 }
 .shareOptions {
