refactor: correct display of friends in right bar

--- a/client/src/components/rightbar/rightbar.scss
+++ b/client/src/components/rightbar/rightbar.scss
@@ -99,7 +99,7 @@
 .rightbarFollowings {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 
   .rightbarFollowing {
     display: flex;
