--- a/client/src/scss/abstracts/_mixins.scss
+++ b/client/src/scss/abstracts/_mixins.scss
@@ -48,6 +48,11 @@
   line-height: 91.666667%;
   color: $color-black;
 }
+@mixin font-h3 {
+  @include font(2rem, 500, $base-font, normal);
+  line-height: 100%;
+  color: $color-black;
+}
 
 @mixin flex-colomn($justify-content: space-between) {
   display: flex;
