--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -15,6 +15,8 @@ $color-grey: #808080;
 $color-teal: teal;
 $color-logo-logo: #1877f2;
 $color-bacgraund-header: #1877f2;
+$color-bacground-Header-card: #faea68;
+$color-bacground-Header-node: #d6cbfe;
 $color-scroll-track: #f1f1f1;
 $color-scroll-trumb: #cccccc;
 $color-bacground-auth: beige;
