fix: fix courses page

--- a/client/src/pages/courses/courses.scss
+++ b/client/src/pages/courses/courses.scss
@@ -1,1 +1,9 @@
 @import '../../scss/main.scss';
+
+.main {
+  width: 100%;
+}
+.mainWrapper {
+  display: flex;
+  justify-content: space-between;
+}
