--- a/client/src/components/courses/courses.scss
+++ b/client/src/components/courses/courses.scss
@@ -5,11 +5,7 @@
 }
 
 .courseWrapper {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding: 50px 20px;
+  margin: 20px;
 }
 .courseeTitle {
   @include font-h3;
@@ -21,27 +17,24 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 10px 10px;
-  // grid-template-areas:
-  //   ". . ."
-  //   ". . ."
-  //   ". . .";
-    @media (max-width: 1300px){
-      grid-template-columns: 1fr 1fr ;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-    }
 
-    @media (max-width: 900px){
-      grid-template-columns: 1fr ;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-    }
-    @media (max-width: 880px){
-      grid-template-columns: 1fr 1fr ;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-    }
-    @media (max-width: 550px){
-      grid-template-columns: 1fr ;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-    }
+  @media (max-width: 1300px) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+
+  @media (max-width: 900px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+  @media (max-width: 880px) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+  @media (max-width: 550px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
 }
 .cardItem {
   width: 100%;
@@ -50,11 +43,23 @@
   border-radius: 0.625rem;
   display: flex;
   flex-direction: column;
-  // padding: 0.625rem;
 }
 .cardHeader {
   padding: 0.75rem 1.25rem;
   border-bottom: 0.0625rem solid $color-grey;
+  min-height: 70px;
+  @media (max-width: 768px) {
+    min-height: 50px;
+  }
+  @media (max-width: 703px) {
+    min-height: 70px;
+  }
+  @media (max-width: 550px) {
+    min-height: 50px;
+  }
+  @media (max-width: 381px) {
+    min-height: 70px;
+  }
 }
 .js-ru {
   background-color: $color-bacground-Header-card;
@@ -65,7 +70,13 @@
   border-radius: 0.625rem 0.625rem 0 0;
 }
 .js-en {
-  background: repeating-linear-gradient(45deg,#faea68,#faea68 20px,#fbf2a5 0,#fbf2a5 40px);
+  background: repeating-linear-gradient(
+    45deg,
+    #faea68,
+    #faea68 20px,
+    #fbf2a5 0,
+    #fbf2a5 40px
+  );
   border-radius: 0.625rem 0.625rem 0 0;
 }
 .cardItemTitle {
@@ -82,7 +93,7 @@
   align-items: center;
   font-size: 1.25rem;
   color: $color-lime-green;
-  & span{
+  & span {
     font-weight: bold;
     margin: 0px 0px 0px 5px;
     color: $color-black;
