--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -2,25 +2,13 @@
 
 .sidebar {
   flex: 3;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 70px);
   overflow-y: scroll;
   position: sticky;
   top: 70px;
   @media (max-width: 768px) {
     display: none;
-    // flex: 1;
-    // position: absolute !important;
-    // left: -100%;
-    // background-color: $color-white;
   }
-  // @media (max-width: 460px) {
-  //   flex: 1;
-  //   width: 100%;
-  //   overflow-y: hidden;
-  //   display: flex;
-  //   z-index: 11;
-  //   position: relative;
-  // }
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -33,6 +21,10 @@
 }
 
 .sidebarWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: calc(100vh - 70px);
   width: 100%;
   padding: 20px;
 }
@@ -70,9 +62,16 @@
   margin: 20px 0;
 }
 .sidebarFriendList {
+  flex: 1 0 auto;
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-
+.sidebarBottom {
+  width: 100%;
+  padding: 20px 20px 0px 0px;
+  @media (max-width: 530px) {
+    padding: 20px 20px 20px 0px;
+  }
+}
