--- a/client/src/components/courses/courses.scss
+++ b/client/src/components/courses/courses.scss
@@ -122,6 +122,7 @@
   padding: 0.625rem;
   border-radius: 0.3125rem;
   cursor: pointer;
+  transition: all 0.2s ease 0.2s;
   &:hover {
     background-color: $color-dark-white;
     color: $color-black;
