--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -38,11 +38,26 @@
 .postCenter {
   margin: 20px 0;
 }
+
 .postImg {
   margin: 20px 0 0 0;
   width: 100%;
   max-height: 500px;
   object-fit: contain;
+}
+
+.tagBlock {
+  color: #555555;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 15px;
+
+  .tagItem {
+    font-size: 16px;
+    cursor: pointer;
+    margin-right: 10px;
+
+  }
 }
 .postBottom {
   display: flex;
