--- a/client/src/components/formAuth/formAuth.scss
+++ b/client/src/components/formAuth/formAuth.scss
@@ -11,6 +11,11 @@
     font-weight: bold;
   }
 
+  .messageError {
+    color: red;
+    margin-bottom: 10px;
+  }
+
   .input {
     width: 100%;
     height: 50px;
