--- a/client/src/pages/myAccount/myAccount.scss
+++ b/client/src/pages/myAccount/myAccount.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
 
     .editProfileForm {
       display: flex;
