refactor: add style of calendar button

--- a/client/src/scss/components/_buttons.scss
+++ b/client/src/scss/components/_buttons.scss
@@ -1,1 +1,10 @@
 //# Buttons
+.btn-calendar {
+  padding: 8px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 20px;
+  margin-right: 20px;
+  background-color: lighten($color: $color-grey, $amount: 45);
+  border: none;
+}
