--- a/client/src/components/rightbar/rightbar.scss
+++ b/client/src/components/rightbar/rightbar.scss
@@ -13,6 +13,7 @@
 
 .birthdayContainer {
   margin-bottom: 18px;
+  margin-right: 10px;
 
   .birthdayContainerIntro {
     display: flex;
@@ -45,6 +46,7 @@
 
       .bDBImg {
         width: 100%;
+        border-radius: 15px;
       }
     }
   }
@@ -104,9 +106,18 @@
   .rightbarFollowing {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-right: 10px;
+    width: 100px;
+    text-align: center;
     margin-bottom: 20px;
     cursor: pointer;
     gap: 10px;
+
+    .follower {
+      border: 2px solid red;
+      margin-right: 25px;
+    }
   }
 }
 
